        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=14635
        rdar://problem/5340188
        Uploading file with non-ASCII character in path fails

        File upload cannot be tested in DumpRenderTree.

        * html/HTMLFormElement.cpp:
        (WebCore::pathGetFilename): A cross-platform helper that extracts a file name from a path.
        (WebCore::HTMLFormElement::formData): Use the above helper instead of code that doesn't
        work on Windows.



Canonical link: https://commits.webkit.org/19592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25067 268f45cc-cd09-0410-ab3c-d52691b4dbfc